# Prog6-heap-cleaned

./: .gitignore  CMakeLists.txt  README  README.md  build.sh  hw6  main  main.c
data_analysis/: analysis.py
libtdmm/: CMakeLists.txt  tdmm.c  tdmm.h
